src/App.scss
@import url('https://fonts.googleapis.com/css?family=Courier+Prime');

* {
  box-sizing: border-box;
  font-family: 'Courier Prime';
  color: #025;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.Header {
  background-color: #DDE;
  padding-left: 1em; padding-right: 1em;
  padding-top: 0.5em; padding-bottom: 0.5em;
  height: 2em;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  position: fixed;
  top: 0;
  z-index: 999;
}

.HeaderShadow {
  background-color: #04A;
  height: 2em;
  width: 100vw;
  position: fixed;
  top: 0.15em;
  left: 0.15em;
  z-index: 997;
}

.Contact {
  background-color: #DDE;
  background: repeating-linear-gradient( -45deg, #DDE, #DDE 5px, #D5D5E5 5px, #D5D5E5 10px );
  box-shadow: 0.15em 0.15em 0 #04A;
  width: 8em;
  height: 6em;
  position: fixed;
  right: 0;
  top: -4em;
  z-index: 998;
  transition: transform 1s;
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-around;

  &.ContactRevealed {
    transform: translateY(5.95em);
  }
}

.ContactLink {
  padding: 0 1.66em;
  font-size: 60%;
  text-decoration: none;
  color: #426;
  font-weight: 700;
  text-align: right;
}

.Title {
  font-size: 26px;
  color: #426;
  font-weight: 700;
}

/* about */

.About {
  background-color: #779;
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.Greeting {
  font-size: 80px;
  font-weight: 700;
  color: #D87;
  text-shadow: 0.05em 0.05em 0 #04A;
}

/* projects */

.Projects {
  background-color: #88A;
  background: repeating-linear-gradient( 45deg, #779, #779 5px, #88A 5px, #88A 10px );
  min-height: 100vh;
  width: 100%;
  display: flex;
  flex-flow: row wrap; /* make it a slideshow instead (: */
  align-items: space-evenly;
  justify-content: space-evenly;
  padding: 2em 0;
}

.GitFrame {
  font-size: 24px;
  background: linear-gradient(
    #DDE 17%, #04A 17% 19%, #DDE 19%
  );
  box-shadow: 0.15em 0.15em 0 #04A;
  margin: 0.5em 0.5em;
  padding: 0 1em;
  height: 10em;
  width: 16em;
  display: flex;
  flex-flow: row wrap;
  flex-shrink: 0;
}

.GitTitle {
  font-size: 26px;
  height: 17%;
  width: 100%;
  color: #426;
  font-weight: 700;
  text-decoration: none;
  padding: 1.8% 0;
}

.GitTitle:hover, .Title:hover, .ContactLink:hover {
  text-decoration: underline;
  cursor: pointer;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

